--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -94,6 +94,7 @@
   group:
     name: "{{ gns3_system_group }}"
     system: true
+  notify: gns3server
 
 - name: "create gns3_system_user {{ gns3_system_user }}"
   user:
@@ -102,6 +103,7 @@
     group: "{{ gns3_system_group }}"
     groups: "{{ gns3_groups }}"
     home: "{{ gns3_system_user_home }}"
+  notify: gns3server
 
 - name: create gns3 cfg dir
   file:
@@ -110,6 +112,7 @@
     mode: 0750
     owner: "{{ gns3_system_user }}"
     group: "{{ gns3_system_group }}"
+  notify: gns3server
 
 - name: create gns3 log dir
   file:
@@ -118,6 +121,7 @@
     mode: 0750
     owner: "{{ gns3_system_user }}"
     group: "{{ gns3_system_group }}"
+  notify: gns3server
 
 - name: configure gns3 server
   template:
@@ -126,6 +130,7 @@
     mode: 0640
     owner: root
     group: "{{ gns3_system_group }}"
+  notify: gns3server
 
 - name: install systemd service file
   template:
