--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -25,7 +25,7 @@ gns3_pip_packages: []
 # FIXME implement gns3-iou
 
 # clean up the ppa after installation?
-# be aware aof the fact that this breaky idempotency
+# be aware af the fact that this breaks idempotency
 gns3_ppa_remove_after_install: true
 
 # prereq
