--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -8,7 +8,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: checkout
+        uses: actions/checkout@v2
         with:
           path: 'rls.gns3server'
 
@@ -19,6 +20,13 @@ jobs:
 
       - name: Install test dependencies.
         run: pip3 install ansible "molecule[docker,lint]" yamllint ansible-lint requests
+
+      - name: pwd
+        run: pwd
+      - name: ls
+        run: ls
+      - name: ls molecule
+        run: ls molecule
 
       - name: run molecule tests
         run: molecule test
