--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -21,15 +21,12 @@ jobs:
       - name: Install test dependencies.
         run: pip3 install ansible "molecule[docker,lint]" yamllint ansible-lint requests
 
-      - name: pwd
-        run: pwd
-      - name: ls
-        run: ls
       - name: ls molecule
-        run: ls molecule
+        run: ls rls.gns3server/molecule
 
       - name: run molecule tests
         run: molecule test
+        working-directory: rls.gns3server
         env:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
