Revert "fixed role name"
This reverts commit 1d84b69dd50665730d65bfef1c3765f90265f361.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,6 @@
 ---
 galaxy_info:
-  role_name: gns3server
-  namespace: rls
+  role_name: ansible-role-gns3
   author: Klaus Zerwes
   description: install gns3 env on debian based systems
   company: Rosa-Luxemburgstiftung-Berlin
