ignore dependencie on geerlingguy.docker in github workflows

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -17,4 +17,6 @@ galaxy_info:
 
 dependencies:
   - role: geerlingguy.docker  # https://github.com/geerlingguy/ansible-role-docker.git
-    when: not lookup('env', 'MOLECULE_FILE')
+    when:
+      - not lookup('env', 'MOLECULE_FILE')
+      - not lookup('env', 'GITHUB_WORKFLOW')
