--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -10,3 +10,7 @@
     - name: "Include rls.gns3server"
       include_role:
         name: "rls.gns3server"
+  post_tasks:
+    - name: "Test gns3 uri works"
+      uri:
+        url: "http://{{ ansible_default_ipv4.address }}:3080/static/web-ui/bundled"
