started tests on ubuntu dockers

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -15,6 +15,7 @@ platforms:
       - SYS_ADMIN
     security_opts:
       - seccomp=unconfined
+
   - name: debian-buster
     image: debian:buster
     dockerfile: Dockerfile-debian-buster.j2
@@ -28,6 +29,36 @@ platforms:
       - SYS_ADMIN
     security_opts:
       - seccomp=unconfined
+
+  - name: ubuntu-focal
+    image: ubuntu:focal
+    dockerfile: Dockerfile-ubuntu-focal.j2
+    privileged: true
+    override_command: false
+    tmpfs:
+      - /run
+      - /run/lock
+      - /tmp
+    capabilities:
+      - SYS_ADMIN
+    security_opts:
+      - seccomp=unconfined
+
+# FIXME bionic has some strance locale problems
+#   indifferent if we use the server from ppa or pip3
+#  - name: ubuntu-bionic
+#    image: ubuntu:bionic
+#    dockerfile: Dockerfile-ubuntu-bionic.j2
+#    privileged: true
+#    override_command: false
+#    tmpfs:
+#      - /run
+#      - /run/lock
+#      - /tmp
+#    capabilities:
+#      - SYS_ADMIN
+#    security_opts:
+#      - seccomp=unconfined
 
 provisioner:
   name: ansible
