extend molecule test using different ansible versions

--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -7,11 +7,11 @@ on:
   schedule:
     - cron: "5 6 * * 1"
 jobs:
-  build:
+  ansible-latest:
+    name: latest ansible version
     runs-on: ubuntu-latest
     steps:
-      - name: checkout
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
         with:
           path: 'rls.gns3server'
 
@@ -21,7 +21,7 @@ jobs:
           python-version: 3.9
 
       - name: Install test dependencies.
-        run: pip3 install ansible "molecule[docker,lint]" yamllint ansible-lint requests
+        run: pip3 install requests dnspython ansible "molecule[docker,lint]" yamllint ansible-lint
 
       - name: run molecule tests
         run: molecule test
@@ -29,3 +29,53 @@ jobs:
         env:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
+          molecule_skip_rebuild_all: true
+  ansible-pinned:
+    name: pinned ansible version
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          path: 'rls.gns3server'
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+
+      - name: Install test dependencies.
+        run: pip3 install requests dnspython "ansible==6.2.0" "molecule[docker,lint]==3.5.2" "yamllint==1.26.0" "ansible-lint==6.4.0"
+
+      - name: run molecule tests
+        run: molecule test
+        working-directory: rls.gns3server
+        env:
+          PY_COLORS: '1'
+          ANSIBLE_FORCE_COLOR: '1'
+          molecule_skip_rebuild_all: true
+  ansible-legacy:
+    name: legacy ansible version
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          path: 'rls.gns3server'
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+
+      - name: Install test dependencies.
+        run: pip3 install requests dnspython "ansible==2.9.27" "molecule[docker,lint]==3.2.3" "yamllint==1.24.2" "ansible-lint==4.2.0"
+
+      - name: Install collections required on ansible 2.9
+        run: ansible-galaxy collection install community.general
+
+      - name: run molecule tests
+        run: molecule test
+        working-directory: rls.gns3server
+        env:
+          PY_COLORS: '1'
+          ANSIBLE_FORCE_COLOR: '1'
+          molecule_skip_rebuild_all: false
