--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -2,6 +2,20 @@
 driver:
   name: docker
 platforms:
+  - name: debian-bookworm
+    image: debian:bookworm
+    dockerfile: Dockerfile-debian-bookworm.j2
+    privileged: true
+    override_command: false
+    tmpfs:
+      - /run
+      - /run/lock
+      - /tmp
+    capabilities:
+      - SYS_ADMIN
+    security_opts:
+      - seccomp=unconfined
+
   - name: debian-bullseye
     image: debian:bullseye
     dockerfile: Dockerfile-debian-bullseye.j2
