--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -34,7 +34,7 @@ gns3_prereq:
   - python3-pyqt5
   - python3-pyqt5.qtsvg
   - python3-pyqt5.qtwebsockets
-  - qemu
+  - qemu-system
   - qemu-kvm
   - qemu-utils
   - libvirt-clients
