--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -7,9 +7,42 @@ on:
   schedule:
     - cron: "5 6 * * 1"
 jobs:
-  ansible-latest:
-    name: latest ansible version
+  molecule:
+    name: ansible
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        ansible:
+          - latest ansible
+          - pinned ansible
+          - legacy ansible
+        distro:
+          - debian-bookworm
+          - debian-bullseye
+          - debian-buster
+          #- ubuntu-jammy
+          - ubuntu-focal
+          #- ubuntu-bionic
+        include:
+          - ansible: latest ansible
+            pip3deps: 'dnspython ansible molecule "molecule-plugins[docker]" yamllint ansible-lint "requests<2.29" "urllib3<2"'
+          - ansible: pinned ansible
+            pip3deps: 'dnspython "ansible==7.4.0" "molecule[docker,lint]==3.5.2" "yamllint==1.26.0" "ansible-lint==6.4.0" "requests<2.29" "urllib3<2"'
+          - ansible: legacy ansible
+            pip3deps: 'dnspython "ansible==2.9.27" "molecule[docker,lint]==3.2.3" "yamllint==1.24.2" "ansible-lint==4.2.0" "requests<2.29" "urllib3<2"'
+          - distro: debian-bookworm
+            did: debian
+            codename: bookworm
+          - distro: debian-bullseye
+            did: debian
+            codename: bullseye
+          - distro: debian-buster
+            did: debian
+            codename: buster
+          - distro: ubuntu-focal
+            did: ubuntu
+            codename: focal
     steps:
       - uses: actions/checkout@v2
         with:
@@ -21,7 +54,7 @@ jobs:
           python-version: 3.9
 
       - name: Install test dependencies.
-        run: pip3 install dnspython ansible molecule "molecule-plugins[docker]" yamllint ansible-lint "requests<2.29" "urllib3<2"
+        run: pip3 install ${{ matrix.pip3deps }}
 
       - name: run molecule tests
         run: molecule test
@@ -30,52 +63,5 @@ jobs:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
           molecule_skip_rebuild_all: true
-  ansible-pinned:
-    name: pinned ansible version
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          path: 'rls.gns3server'
-
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.9
-
-      - name: Install test dependencies.
-        run: pip3 install dnspython "ansible==7.4.0" "molecule[docker,lint]==3.5.2" "yamllint==1.26.0" "ansible-lint==6.4.0" "requests<2.29" "urllib3<2"
-
-      - name: run molecule tests
-        run: molecule test
-        working-directory: rls.gns3server
-        env:
-          PY_COLORS: '1'
-          ANSIBLE_FORCE_COLOR: '1'
-          molecule_skip_rebuild_all: true
-  ansible-legacy:
-    name: legacy ansible version
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          path: 'rls.gns3server'
-
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.9
-
-      - name: Install test dependencies.
-        run: pip3 install dnspython "ansible==2.9.27" "molecule[docker,lint]==3.2.3" "yamllint==1.24.2" "ansible-lint==4.2.0" "requests<2.29" "urllib3<2"
-
-      - name: Install collections required on ansible 2.9
-        run: ansible-galaxy collection install community.general
-
-      - name: run molecule tests
-        run: molecule test
-        working-directory: rls.gns3server
-        env:
-          PY_COLORS: '1'
-          ANSIBLE_FORCE_COLOR: '1'
-          molecule_skip_rebuild_all: false
+          MOLECULE_DISTRO: ${{ matrix.did }}
+          MOLECULE_DISTROCODENAME: ${{ matrix.codename }}
