--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -8,7 +8,7 @@ on:
     - cron: "5 6 * * 1"
 jobs:
   molecule:
-    name: ansible
+    name: molecule
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
