--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -27,9 +27,9 @@ jobs:
           - ubuntu1804
         include:
           - ansible: latest ansible
-            pip3deps: 'dnspython ansible molecule "molecule-plugins[docker]" yamllint ansible-lint "requests<2.29" "urllib3<2"'
+            pip3deps: 'dnspython ansible molecule "molecule-plugins[docker]" yamllint ansible-lint'
           - ansible: pinned ansible
-            pip3deps: 'dnspython "ansible==7.4.0" "molecule[docker,lint]==3.5.2" "yamllint==1.26.0" "ansible-lint==6.4.0" "requests<2.29" "urllib3<2"'
+            pip3deps: 'dnspython "ansible==8.6.0" "molecule-plugins[docker]" "yamllint==1.32.0" "ansible-lint==6.22.0"'
           - ansible: legacy ansible
             pip3deps: 'dnspython "ansible==2.9.27" "molecule[docker,lint]==3.2.3" "yamllint==1.24.2" "ansible-lint==4.2.0" "requests<2.29" "urllib3<2"'
           - distro: debian12
