--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -101,7 +101,7 @@
   ansible.builtin.file:
     path: /etc/gns3
     state: directory
-    mode: 0750
+    mode: "0750"
     owner: "{{ gns3_system_user }}"
     group: "{{ gns3_system_group }}"
   notify: gns3server
@@ -110,7 +110,7 @@
   ansible.builtin.file:
     path: /var/log/gns3
     state: directory
-    mode: 0750
+    mode: "0750"
     owner: "{{ gns3_system_user }}"
     group: "{{ gns3_system_group }}"
   notify: gns3server
@@ -119,7 +119,7 @@
   ansible.builtin.template:
     src: gns3_server.conf.j2
     dest: /etc/gns3/gns3_server.conf
-    mode: 0640
+    mode: "0640"
     owner: root
     group: "{{ gns3_system_group }}"
   notify: gns3server
@@ -128,7 +128,7 @@
   ansible.builtin.template:
     src: gns3.service.j2
     dest: /lib/systemd/system/gns3.service
-    mode: 0755
+    mode: "0755"
     owner: root
     group: root
 
